
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gait-forecasting"
version = "0.2.0"
description = "Research-grade locomotion forecasting framework using EMG, muscle synergies, and latent state-space models"
requires-python = ">=3.10"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
